log_output/manifests/log-output-app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: log-output-dep
  namespace: exercises
spec:
  replicas: 1
  selector:
    matchLabels:
      app: log-output-app
  template:
    metadata:
      labels:
        app: log-output-app
    spec:
      volumes:
        - name: shared-logs
          persistentVolumeClaim:
            claimName: shared-logs-claim
      containers:
        - name: log-output-writer-app
          image: miguelsombrero/log-output-writer-app@sha256:16b1f58e5cd1d40347324b538e3a3098132f893761aea022aefdb5a96427257b
          ports:
            - containerPort: 8090
          volumeMounts:
          - name: shared-logs
            mountPath: /usr/src/app/files

        - name: log-output-reader-app
          image: miguelsombrero/log-output-reader-app@sha256:0165fdb2a9fcb01fef9e4b2789ff28c234078c5e92605b1ac031ca1396fa5005
          ports:
            - containerPort: 8091
          volumeMounts:
          - name: shared-logs
            mountPath: /usr/src/app/files
