log_output/manifests/log-output-app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: log-output-svc
  namespace: exercises
spec:
  type: ClusterIP
  selector:
    app: log-output-app
  ports:
    - port: 2345
      protocol: TCP
      targetPort: 8091
